--- a/app/assets/stylesheets/eightythousand.scss
+++ b/app/assets/stylesheets/eightythousand.scss
@@ -181,19 +181,6 @@ a.fp-splash-find-out-more {
     a{ color: $link_color; }
   }
 
-  ul.nav.nav-pills.nav-stacked {
-    padding-top: 35px;
-    li.heading, li.heading a{
-      font-weight: bold;
-    }
-    li.heading a:hover {
-      color: $link_hover_color;
-    }
-    li.heading {
-      border-bottom: 1px solid #efefef;
-    }
-  }
-
   /* front page blog latest snippets */
   .sidebar {
     h3{
@@ -384,6 +371,7 @@ input[type="email"] {
       margin-bottom: 0;
       padding-top: 0.75em;
       padding-bottom: 0.75em;
+      border-radius: 0;
     }
   }
 }
